# control-z

./: .gitignore  CHANGELOG.md  CNAME  LICENSE  LICENSING.md  NOTICE  README.md  Start Civic Media Studio.command  Start control-z Suite.command  docker-compose.yml  index.html  node-tree.html  pyproject.toml  requirements.txt  roadmap.html  whitepaper.html
.claude/: launch.json
app/: app.css  app.js  graph.json  index.html  officials.json  stats.json
app/add/: index.html
app/covenant/: index.html
app/feeds/: issue_brookline_accessibility-in-public-spaces.xml  issue_brookline_acreage-per-thousand-residents.xml  issue_brookline_ada-accessibility.xml  issue_brookline_affordable-housing-funding.xml  issue_brookline_affordable-housing.xml  issue_brookline_age-friendly-cities.xml  issue_brookline_anti-semitism.xml  issue_brookline_april-7th-meeting-agenda.xml  issue_brookline_artificial-intelligence.xml  issue_brookline_asset-management.xml  issue_brookline_black-population-representation.xml  issue_brookline_blue-bikes-program.xml  issue_brookline_bridal-path-safety-and-design.xml  issue_brookline_brooklyn-historical-society.xml  issue_brookline_building-permit-fees.xml  issue_brookline_campaign-finance.xml  issue_brookline_capital-improvement-projects.xml  issue_brookline_cash-flow-management.xml  issue_brookline_cheer-zone.xml  issue_brookline_chestnut-hill-development.xml  issue_brookline_chief-pastor-contract.xml  issue_brookline_civil-rights.xml  issue_brookline_clerk-s-office-access.xml  issue_brookline_clinical-social-work-services.xml  issue_brookline_community-engagement-and-participation.xml  issue_brookline_community-preservation-act.xml  issue_brookline_complete-streets.xml  issue_brookline_condo-association-concerns.xml  issue_brookline_customer-service-improvement.xml  issue_brookline_cyber-security.xml  issue_brookline_dark-sky-preservation.xml  issue_brookline_data-reporting-and-accountability.xml  issue_brookline_department-operations-funding.xml  issue_brookline_development-and-growth-concerns.xml  issue_brookline_economic-development.xml  issue_brookline_economic-viability.xml  issue_brookline_educational-equity.xml  issue_brookline_elected-officials-accountability.xml  issue_brookline_emergency-management.xml  issue_brookline_engagement-with-decision-makers.xml  (+82 more)
app/graph/: index.html
app/issues/: issue_brookline_beacon-street-improvements.json  issue_brookline_chestnut-hill-commercial-development.json  issue_brookline_class-sizes.json  issue_brookline_department-operations-funding.json  (+10 more)
brand/: README.md  branding.md
clear/: __init__.py  cli.py  dsp.py  isolate.py  loudness.py  roomtone.py
czcore/: __init__.py  captions.py  denoise.py  drain.py  ffrun.py  llm.py  media.py  models.py  moments.py  mt.py  mt_local.py  paths.py  pdfout.py  proxy.py  shots.py  sidecars.py  tools.py  tts.py  vision.py  ytdlp.py
depth/: __init__.py  cli.py  engine.py
grabber/: __init__.py  civicclerk.py  cli.py  convert.py  zoomshare.py
grades/: README.md
highlighter/: __init__.py  cli.py  highlights.py  insight.py  reel.py
indexer/: HANDOFF-DESK.md  __init__.py  catalog.py  cli.py
interpreter/: HANDOFF.md  __init__.py  glossary.py  kit.py  sources.py  tracks.py
memory/: HANDOFF.md  __init__.py  analyze.py  detect.py  documents.py  embed.py  ingest.py  issues.py  policy.py  seam.py  store.py  votes.py
narrator/: __init__.py  describe.py  gaps.py  mix.py  script.py
packaging/: RELEASE-NOTES-1.1.0.md  RELEASE-NOTES-1.2.0.md  RELEASE-NOTES-1.3.0.md  RELEASE-NOTES-1.4.0.md  RELEASE-NOTES-1.5.0.md  RELEASE-NOTES-1.7.1.md  RELEASE-NOTES-1.9.0.md  RELEASE-NOTES-2.0.0.md  build_ffmpeg.sh  build_opencv.sh  build_pyav.sh  build_suite.sh  icon.icns  launch_suite.py  make_icon.py  notarize_suite.sh  sign_suite.sh  suite.spec
packs/: README.md  build_zip.py
pivot/: __init__.py  analyze.py  app.py  aspect.py  cli.py  persons.py  render.py  solver.py  tracking.py  ui.py
publisher/: __init__.py  brand.py  bundle.py  cli.py  kit.py  render.py
record/: Dockerfile  HANDOFF.md  INFRA.md  OPERATING.md  __init__.py  app.py  auth.py  embed_neural.py  import_desk.py  migrate.py  pipeline.py  press.py  redirect.py  seed_towns.py  settings.py  sources.py  steward.py  store.py
rise/: __init__.py  cli.py  convert.py  engine.py  video.py
scribe/: __init__.py  cli.py  diarize.py  exports.py  tighten.py  timecode.py  transcribe.py  transcript.py
site/: build.py  make_slides.py
slate/: __init__.py  cli.py  fonts.py  generators.py  lowerthird.py  render.py
specs/: 00-overview.md  01-pivot.md  02-stencil.md  03-scribe.md  04-clear.md  05-rise.md  06-depth.md  07-site-redesign.md  08-suite-app.md  09-packaging.md  10-template-pack.md  11-make-tools.md  12-community-program.md  13-publisher.md  14-memory.md  15-interpreter-narrator.md  16-web.md  17-studio.md  18-split.md  19-roadmap.md  20-newspaper.md  20-session-prompt.md  PARALLEL.md
stencil/: __init__.py  cli.py  core.py  export.py  post.py
studio/: Dockerfile  HANDOFF.md  INFRA.md  __init__.py  app.py  auth.py  embed_neural.py  import_desk.py  migrate.py  press.py  redirect.py  settings.py  store.py
suite/: __init__.py  __main__.py  frames.py  server.py  sessions.py
tests/: test_aspect.py  test_clear_dsp.py  test_davinci.py  test_denoise.py  test_depth.py  test_drain.py  test_export_presets.py  test_fcpxml.py  test_fetch_tools.py  test_frames.py  test_fusion.py  test_grabber_desk.py  test_highlights.py  test_index_desk.py  test_indexer.py  test_insight.py  test_interpreter_mt.py  test_interpreter_tracks.py  test_jobs.py  test_kb.py  test_llm_names.py  test_media.py  test_meeting_shape.py  test_memory_analyze.py  test_memory_api.py  test_memory_documents.py  test_memory_embed.py  test_memory_ingest.py  test_memory_issues.py  test_memory_seam.py  test_memory_store.py  test_memory_votes.py  test_models.py  test_mt_local.py  test_narrator_gaps.py  test_narrator_script.py  test_packaging.py  test_proxy_captions.py  test_publisher.py  test_record_api.py  (+18 more)
web/: __init__.py  bake.py  canon.py  emit.py  tools.py
(+773 files in other folders)
