[project]
name = "control-z-apps"
version = "1.7.0"
description = "control-z: free cleaning, prepping, and finishing tools for DaVinci Resolve (standalone apps monorepo)"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
pivot = ["numpy", "av", "opencv-python"]
ui = ["fastapi", "uvicorn", "pywebview"]
# everything the Suite needs to run all ten tools (mirrors requirements.txt)
suite = ["numpy", "av", "opencv-python",
         "fastapi", "uvicorn[standard]", "pywebview",
         "onnxruntime",
         "scipy", "soundfile", "pyloudnorm",
         "faster-whisper", "sherpa-onnx",
         "pillow"]
# Stencil's click-to-matte runtime: optional by design, ~700 MB on Apple
# silicon (more where torch's wheels bundle CUDA). SAM 2 comes from Meta's repo
# because the `sam2` name on PyPI is an unaffiliated third-party fork; a direct
# reference is fine here, but it would bar this extra from an index upload.
# Meta's metadata names the project `sam-2` (the import stays `sam2`) — pin
# the metadata name or pip discards the URL and goes looking on PyPI.
stencil = ["torch", "sam-2 @ git+https://github.com/facebookresearch/sam2.git"]
site = ["jinja2", "pyyaml"]
dev = []
# The macOS bundle builder (specs/09). Deliberately NOT part of the `suite`
# runtime extra: the shipped app should not carry its own builder, and
# PyInstaller must run from THIS venv (a foreign venv is a hard error in
# PyInstaller 7).
packaging = ["pyinstaller>=6.21"]

[project.scripts]
suite = "suite.__main__:main"
pivot-cli = "pivot.cli:main"
stencil-cli = "stencil.cli:main"
scribe-cli = "scribe.cli:main"
clear-cli = "clear.cli:main"
rise-cli = "rise.cli:main"
depth-cli = "depth.cli:main"
highlighter-cli = "highlighter.cli:main"
grabber-cli = "grabber.cli:main"
index-cli = "indexer.cli:main"
slate-cli = "slate.cli:main"
publisher-cli = "publisher.cli:main"

[tool.setuptools]
packages = ["czcore", "czcore.exports", "czcore.appshell",
            "pivot", "stencil", "scribe", "clear", "rise", "depth",
            "highlighter", "grabber", "indexer", "slate", "publisher",
            "memory", "interpreter", "narrator",
            "suite", "suite.tools"]

[tool.setuptools.package-data]
pivot = ["static/*.html"]
depth = ["templates/*.setting"]
interpreter = ["glossaries/*.json"]
# static/* alone misses static/js/*.js — the whole UI. Both globs, explicitly.
suite = ["static/*.html", "static/*.css", "static/js/*.js"]
