[project]
name = "control-z-apps"
version = "1.9.0"
description = "control-z: free cleaning, prepping, and finishing tools for DaVinci Resolve (standalone apps monorepo)"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
pivot = ["numpy", "av", "opencv-python"]
ui = ["fastapi", "uvicorn", "pywebview"]
# everything the Suite needs to run all ten tools (mirrors requirements.txt)
suite = ["numpy", "av", "opencv-python",
         "fastapi", "uvicorn[standard]", "pywebview",
         "onnxruntime",
         "scipy", "soundfile", "pyloudnorm",
         "faster-whisper", "sherpa-onnx",
         "ctranslate2", "tokenizers",
         "pypdf>=6.14",
         "pillow"]
# Stencil's click-to-matte runtime: optional by design, ~700 MB on Apple
# silicon (more where torch's wheels bundle CUDA). SAM 2 comes from Meta's repo
# because the `sam2` name on PyPI is an unaffiliated third-party fork; a direct
# reference is fine here, but it would bar this extra from an index upload.
# Meta's metadata names the project `sam-2` (the import stays `sam2`) — pin
# the metadata name or pip discards the URL and goes looking on PyPI.
stencil = ["torch", "sam-2 @ git+https://github.com/facebookresearch/sam2.git"]
site = ["jinja2", "pyyaml"]
dev = []
# The macOS bundle builder (specs/09). Deliberately NOT part of the `suite`
# runtime extra: the shipped app should not carry its own builder, and
# PyInstaller must run from THIS venv (a foreign venv is a hard error in
# PyInstaller 7).
packaging = ["pyinstaller>=6.21"]
# The hosted record's server (specs/17). Deliberately NOT part of the `suite`
# runtime extra, and deliberately absent from packaging/suite.spec: a signed
# desktop DMG has no business carrying a Postgres driver or a cloud SDK. The
# desk stays local-first and BYO-key; this is publicrecord's own bill.
# google-auth alone imports and then fails on its transport, so the extra
# names the transport too — otherwise the console's own error message tells
# an operator to install a package they already have.
record = ["psycopg[binary,pool]>=3.2", "pgvector>=0.3",
          "fastapi", "uvicorn[standard]",
          "google-auth[requests]>=2.30"]

[project.scripts]
suite = "suite.__main__:main"
pivot-cli = "pivot.cli:main"
stencil-cli = "stencil.cli:main"
scribe-cli = "scribe.cli:main"
clear-cli = "clear.cli:main"
rise-cli = "rise.cli:main"
depth-cli = "depth.cli:main"
highlighter-cli = "highlighter.cli:main"
grabber-cli = "grabber.cli:main"
index-cli = "indexer.cli:main"
slate-cli = "slate.cli:main"
publisher-cli = "publisher.cli:main"

[tool.setuptools]
packages = ["czcore", "czcore.exports", "czcore.appshell",
            "pivot", "stencil", "scribe", "clear", "rise", "depth",
            "highlighter", "grabber", "indexer", "slate", "publisher",
            "memory", "interpreter", "narrator",
            "web",
            "studio", "record.connectors",
            "suite", "suite.tools"]

[tool.setuptools.package-data]
pivot = ["static/*.html"]
depth = ["templates/*.setting"]
interpreter = ["glossaries/*.json"]
web = ["static/*"]
# The migrations are data, not code — setuptools will not carry .sql for free.
record = ["migrations/*.sql"]
# static/* alone misses static/js/*.js — the whole UI. Both globs, explicitly.
suite = ["static/*.html", "static/*.css", "static/js/*.js"]
